--- a/build.gradle
+++ b/build.gradle
@@ -3,34 +3,87 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'groovy'
 apply plugin: 'java'
+apply plugin: 'idea'
 
-sourceCompatibility = 1.8
+jar {
+    manifest {
+        attributes 'Main-Class' : 'com.adamwcooper.games.MazeGame'
+    }
+}
+
+project.ext.lwjglVersion = "3.2.2"
+project.ext.lwjglNatives = "natives-macos"
 
 repositories {
     mavenCentral()
 }
 
-public String getLwjglArch(String platform) {
-    switch(platform.replaceAll(' ', '').toLowerCase()) {
-        case ~/.*linux.*/:  return 'linux'
-        case ~/.*darwin.*/: return 'macos'
-        case ~/.*osx.*/:    return 'macos'
-        case ~/.*win.*/:    return 'windows'
-        default:            return platform
-    }
-}
-
-ext {
-    //lwjglVersion = "3.0.0b"
-    lwjglVersion = "3.1.0"
-    lwjglArch = getLwjglArch(System.properties['os.name'])
-}
-
 dependencies {
-    compile group: 'org.lwjgl', name: 'lwjgl-util', version: '3.1.0'
-    compile "org.lwjgl:lwjgl:$lwjglVersion"
-    compile "org.lwjgl:lwjgl-glfw:$lwjglVersion"
-    compile "org.lwjgl:lwjgl-opengl:$lwjglVersion"
-    runtime "org.lwjgl:lwjgl:$lwjglVersion:natives-$lwjglArch"
-    runtime "org.lwjgl:lwjgl-glfw:$lwjglVersion:natives-$lwjglArch"
+    implementation "org.lwjgl:lwjgl:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-assimp:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-bgfx:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-cuda:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-egl:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-glfw:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-jawt:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-jemalloc:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-libdivide:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-llvm:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-lmdb:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-lz4:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-meow:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-nanovg:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-nfd:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-nuklear:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-odbc:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-openal:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-opencl:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-opengl:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-opengles:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-openvr:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-opus:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-par:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-remotery:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-rpmalloc:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-sse:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-stb:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-tinyexr:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-tinyfd:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-tootle:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-vma:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-vulkan:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-xxhash:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-yoga:$lwjglVersion"
+    implementation "org.lwjgl:lwjgl-zstd:$lwjglVersion"
+    runtimeOnly "org.lwjgl:lwjgl:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-assimp:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-bgfx:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-glfw:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-jemalloc:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-libdivide:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-llvm:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-lmdb:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-lz4:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-meow:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-nanovg:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-nfd:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-nuklear:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-openal:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-opengl:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-opengles:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-openvr:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-opus:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-par:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-remotery:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-rpmalloc:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-sse:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-stb:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-tinyexr:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-tinyfd:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-tootle:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-vma:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-vulkan:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-xxhash:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-yoga:$lwjglVersion:$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-zstd:$lwjglVersion:$lwjglNatives"
 }
