--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,6 @@ apply plugin: 'groovy'
 apply plugin: 'java'
 apply plugin: 'idea'
 
-jar {
-    manifest {
-        attributes 'Main-Class' : 'com.adamwcooper.games.MazeGame'
-    }
-}
-
 project.ext.lwjglVersion = "3.2.2"
 project.ext.lwjglNatives = "natives-macos"
 
@@ -19,71 +13,78 @@ repositories {
 }
 
 dependencies {
-    implementation "org.lwjgl:lwjgl:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-assimp:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-bgfx:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-cuda:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-egl:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-glfw:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-jawt:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-jemalloc:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-libdivide:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-llvm:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-lmdb:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-lz4:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-meow:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-nanovg:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-nfd:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-nuklear:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-odbc:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-openal:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-opencl:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-opengl:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-opengles:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-openvr:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-opus:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-par:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-remotery:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-rpmalloc:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-sse:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-stb:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-tinyexr:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-tinyfd:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-tootle:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-vma:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-vulkan:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-xxhash:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-yoga:$lwjglVersion"
-    implementation "org.lwjgl:lwjgl-zstd:$lwjglVersion"
-    runtimeOnly "org.lwjgl:lwjgl:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-assimp:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-bgfx:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-glfw:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-jemalloc:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-libdivide:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-llvm:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-lmdb:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-lz4:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-meow:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-nanovg:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-nfd:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-nuklear:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-openal:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-opengl:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-opengles:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-openvr:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-opus:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-par:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-remotery:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-rpmalloc:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-sse:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-stb:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-tinyexr:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-tinyfd:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-tootle:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-vma:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-vulkan:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-xxhash:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-yoga:$lwjglVersion:$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-zstd:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-assimp:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-bgfx:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-cuda:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-egl:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-glfw:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-jawt:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-jemalloc:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-libdivide:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-llvm:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-lmdb:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-lz4:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-meow:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-nanovg:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-nfd:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-nuklear:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-odbc:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-openal:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-opencl:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-opengl:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-opengles:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-openvr:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-opus:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-par:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-remotery:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-rpmalloc:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-sse:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-stb:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-tinyexr:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-tinyfd:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-tootle:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-vma:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-vulkan:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-xxhash:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-yoga:$lwjglVersion"
+    compile "org.lwjgl:lwjgl-zstd:$lwjglVersion"
+    compile "org.lwjgl:lwjgl:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-assimp:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-bgfx:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-glfw:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-jemalloc:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-libdivide:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-llvm:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-lmdb:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-lz4:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-meow:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-nanovg:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-nfd:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-nuklear:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-openal:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-opengl:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-opengles:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-openvr:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-opus:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-par:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-remotery:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-rpmalloc:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-sse:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-stb:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-tinyexr:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-tinyfd:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-tootle:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-vma:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-vulkan:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-xxhash:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-yoga:$lwjglVersion:$lwjglNatives"
+    compile "org.lwjgl:lwjgl-zstd:$lwjglVersion:$lwjglNatives"
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class' : 'com.adamwcooper.games.MazeGame'
+    }
+    from configurations.runtime.collect { zipTree(it) }
 }
